add all sign modal loader button

--- a/service-web/src/components/login/forgetPassword/forgetPassword.html
+++ b/service-web/src/components/login/forgetPassword/forgetPassword.html
@@ -29,9 +29,10 @@
                     <span v-show="errors.has('email-address')" class="help is-danger absolute left-0 mt1">{{ errors.first('email-address') }}</span>
                   </div>
                 </fieldset>
-                <div class="cf w-100 mt4">
+                <div class="cf w-100 mt4 relative">
                   <a class="f6 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100" href="#0"
                      @click.prevent="forgetPassword($event)">RESET PASSWORD</a>
+                  <div class="button-loader"></div>
                 </div>
               </form>
             </div>
