--- a/service-web/src/components/login/signUp/signUp.html
+++ b/service-web/src/components/login/signUp/signUp.html
@@ -78,9 +78,10 @@
                   <span v-show="errors.has('cpassword')" class="help is-danger absolute left-0 mt1">{{ errors.first('cpassword') }}</span>
                 </div>
               </fieldset>
-              <div class="cf w-100 mt4">
+              <div class="cf w-100 mt4 relative h3">
                 <button class="f6 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100 pointer"
                    @click.prevent="signUp($event)" :disabled="loading">SIGN UP</button>
+                <div class="button-loader"></div>
               </div>
               <div class="cf w-100 mt2">
                 <a class="f6 fw6 link dim br-pill ph3 pv3 mb2 dib ba b--lightest-blue blue w-100" href="#0">FACEBOOK
