--- a/service-web/src/components/notes-card-modal/notes-card-modal.html
+++ b/service-web/src/components/notes-card-modal/notes-card-modal.html
@@ -25,7 +25,7 @@
                   </ul>
                   <div v-else>
                     <div class="pa3 pa3-ns mt3">
-                    <span class="f5 db lh-copy measure color-light">
+                    <span class="f5 db lh-copy measure color-light center">
                       <span class="fw5">No Journals for the user</span>
                     </span>
                     </div>
