--- a/service-web/src/components/challengeStates/done/done.html
+++ b/service-web/src/components/challengeStates/done/done.html
@@ -45,7 +45,7 @@
                 </span>
         </div>
         <div class="w-100 center mt2">
-          <textarea v-show="notesStatus!=='Add'" v-model="notes" id="comment" name="comment" class=" border-box hover-black w-100 measure ba b--black-20 pa2 br2" aria-describedby="comment-desc"></textarea>
+          <textarea v-show="notesStatus!=='Add'" v-model="notes" id="comment" name="comment" class="h4 textarea border-box hover-black w-100 measure ba b--black-20 pa2 br2" aria-describedby="comment-desc"></textarea>
         </div>
         <div >
           <a @click.stop.prevent="changeStatus" class="f6 fw5 link br-pill ph4 mb2 mt4 dib white blue-dark-color pt2 pb2 lh-copy" href="javascript:void(0)">{{notesStatus==='Add'? 'ADD NOTES': (notesStatus==='Save'? 'SAVE NOTES': 'UPDATE NOTES')}}
