added progress bar in signup,signin and forgot password

--- a/service-web/src/components/login/forgetPassword/forgetPassword.html
+++ b/service-web/src/components/login/forgetPassword/forgetPassword.html
@@ -30,9 +30,9 @@
                   </div>
                 </fieldset>
                 <div class="cf w-100 mt4 relative">
-                  <a class="f6 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100" href="#0"
+                  <a  v-if="!showLoader" class="f6 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100" href="#0"
                      @click.prevent="forgetPassword($event)">RESET PASSWORD</a>
-                  <div class="button-loader"></div>
+                  <div v-else class="button-loader"></div>
                 </div>
               </form>
             </div>
