--- a/service-web/src/components/login/signIn/signIn.html
+++ b/service-web/src/components/login/signIn/signIn.html
@@ -43,9 +43,9 @@
                     PASSWORD</a>
                 </div>
                 <div class="cf w-100 mt4 relative h3">
-                  <a class="f6 fw5 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100" href="#0"
+                  <a v-if="!showLoader" class="f6 fw5 link dim br-pill ph3 pv3 mb2 dib white blue-dark-color w-100" href="#0"
                      @click.prevent="signIn($event)">LOGIN</a>
-                  <div class="button-loader"></div>
+                  <div v-else class="button-loader"></div>
                 </div>
                 <div class="cf w-100 mt2">
                   <a class="small-font fw6 link dim br-pill ph3 pv3 mb2 dib ba b--lightest-blue blue w-100" href="#0">FACEBOOK
