corrected notes in challenge details page

--- a/service-web/src/views/challenge-page/challenge-page.html
+++ b/service-web/src/views/challenge-page/challenge-page.html
@@ -16,7 +16,7 @@
           <div class="cf db o-90">
             <article class="w-100 mw7 center ph3 ph5-ns tc br2 pv3" v-if="challengeData && challengeData['notes']">
               <h4 class="f4 fw5 black-40 tl mb0">My journal</h4>
-              <p class="f6 lh-copy navy tl avenir">{{challengeData['notes']}}</p>
+              <pre class="f6 lh-copy navy tl avenir">{{challengeData['notes']}}</pre>
             </article>
           </div>
         </div>
