fixed email template ui

--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -3,7 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Email Check In</title>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 	<style type="text/css">
+		body, td, input, textarea, select {
+			/*!*font-family: 'Avenir Next' !important;*!*/
+			font-family: 'Open Sans', sans-serif;
+		}
 
 		.midd-content .gradient-part {
 			width: 520px;
@@ -28,32 +33,29 @@
 		.border-radius-4 {
 			border-radius: 4px;
 		}
+
 	</style>
 </head>
-<body style="background-color: #fff;  margin: 0;  padding: 0;  font-family: 'Avenir Next';">
-<div class="wrapper" style="height: 100%;  width: 100%;  display: table;  position: absolute;">
+<body style="background-color: #fff;  margin: 0;  padding: 0">
+<div class="wrapper">
 	<div class="midd-content" style="display: table-cell;  vertical-align: middle;">
-		<div class="gradient-part" style="padding:40px 0 0 0; width: 600px;">
+		<div class="" style=" width: 600px;">
 			<table width="100%" cellpadding="0" cellspacing="0">
 				<tr>
 					<td class="" width="600" align="center">
 						<table cellpadding="0" cellspacing="0" width="100%">
-							<tr>
-								<td class="column" width="100%">
-									<table width="100%" cellpadding="0" cellspacing="0">
-										<tr class="">
-											<td width="100%" align="left"
-												style="font-size: 34px; font-weight: 600; text-align: center;     padding-top: 13px; padding-bottom: 87px;">
-												Welcome to <br> Active Parthways!
-											</td>
-										</tr>
-									</table>
+							<tr align="top">
+								<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome_part.jpg); height: 186px; width: 100%;">
 								</td>
 							</tr>
-							<tr style="background-color: #fdfdfd;">
-								<td class="column" width="100%" style="padding:0 20px;">
-									<table width="100%" cellpadding="0" cellspacing="0"
-										   style=" background-color: #fff; margin: -40px 0 40px; padding:20px; border-radius: 10px; box-shadow: 0px 35px 34px 3px hsla(0, 0%, 94%, 0.78);">
+							<tr align="top">
+								<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top_corner_white.jpg); height: 38px; width: 100%;">
+								</td>
+							</tr>
+							<tr align="top">
+								<td class="column">
+									<table cellpadding="0" cellspacing="0"
+										   style=" background-image:url(https://activepathways.co/images/midde-repeat.jpg); width: 100%; background-repeat: repeat-y; padding: 0 50px 0px;">
 										<tr>
 											<td width="100%" align="left"
 												style="font-size: 16px; font-weight: 400; padding: 0; margin-top: 30px; color: #444444;">
@@ -62,7 +64,7 @@
 										</tr>
 										<tr>
 											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 200; padding-bottom: 20px; color: #7e8b9c;">
+												style="font-size: 17px; line-height: 1.6; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
 												Welcome to Active Pathways! We are thrilled that you joined our
 												programme. You’ve made first move towards a health and happier life.
 
@@ -70,7 +72,7 @@
 										</tr>
 										<tr>
 											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 200; padding-bottom: 20px; color: #7e8b9c;">
+												style="font-size: 17px; line-height: 1.6; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
 												Active Pathways is an invitation to fully live the present moment, to
 												see the world
 												around you with new eyes and discover opportunities to exercise in your
@@ -80,14 +82,14 @@
 										</tr>
 										<tr>
 											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 200; padding-bottom: 20px; color: #7e8b9c;">
+												style="font-size: 17px; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
 												Get ready. You start tomorrow!
 
 											</td>
 										</tr>
 										<tr>
 											<td width="100%" align="left"
-												style="font-size: 18px; font-weight: 300; padding-bottom: 5px; color: #4a4a4a;">
+												style="font-size: 18px; font-weight: 400; padding-bottom: 5px; color: #4a4a4a;">
 												Before starting the programme,<br> we invite you to complete the
 												following
 												steps:
@@ -95,22 +97,22 @@
 										</tr>
 										<tr>
 											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 200; padding-top: 10px; color: #aeb7c1;">
-												<span style="text-align: center; border: 1px solid #96bfe2; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; display: inline-block;">1</span>
+												style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #aeb7c1;">
+												<span style="text-align: center; border: 1px solid #96bfe2; color: #96bfe2; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
 												Complete our wellbeing assessment
 											</td>
 										</tr>
 										<tr>
 											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 200; padding-top: 10px; color: #aeb7c1;">
-												<span style="text-align: center; border: 1px solid #96bfe2; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; display: inline-block;">2</span>
+												style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #aeb7c1;">
+												<span style="text-align: center; border: 1px solid #96bfe2; margin-right: 10px; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
 												Say hello in our Facebook page
 											</td>
 										</tr>
 										<tr>
 											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 200; padding-top: 10px; color: #aeb7c1;">
-												<span style="text-align: center; border: 1px solid #96bfe2; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; display: inline-block;">3</span>
+												style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #aeb7c1;">
+												<span style="text-align: center; border: 1px solid #96bfe2; margin-right: 10px; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">3</span>
 												Multiply the fun. Invite your family and friends
 											</td>
 										</tr>
@@ -133,6 +135,11 @@
 											</td>
 										</tr>
 									</table>
+								</td>
+							</tr>
+							<tr style=" background-image:url(https://activepathways.co/images/bottom_corner_white.jpg); height: 92px; width: 100%; background-repeat: no-repeat; padding: 0 50px 100px;">
+								<td>
+									
 								</td>
 							</tr>
 						</table>
