--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -45,11 +45,11 @@
 					<td class="" width="600" align="center">
 						<table cellpadding="0" cellspacing="0" width="100%">
 							<tr align="top">
-								<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome_part.jpg); height: 186px; width: 100%;">
+								<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; width: 100%;">
 								</td>
 							</tr>
 							<tr align="top">
-								<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top_corner_white.jpg); height: 38px; width: 100%;">
+								<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); height: 38px; width: 100%;">
 								</td>
 							</tr>
 							<tr align="top">
@@ -137,7 +137,7 @@
 									</table>
 								</td>
 							</tr>
-							<tr style=" background-image:url(https://activepathways.co/images/bottom_corner_white.jpg); height: 92px; width: 100%; background-repeat: no-repeat; padding: 0 50px 100px;">
+							<tr style=" background-image:url(https://activepathways.co/images/bottom-corner-white.jpg); height: 92px; width: 100%; background-repeat: no-repeat; padding: 0 50px 100px;">
 								<td>
 									
 								</td>
