--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -37,117 +37,112 @@
 	</style>
 </head>
 <body style="background-color: #fff;  margin: 0;  padding: 0">
-<div class="wrapper">
-	<div class="midd-content" style="display: table-cell;  vertical-align: middle;">
-		<div class="" style=" width: 600px;">
-			<table width="100%" cellpadding="0" cellspacing="0">
-				<tr>
-					<td class="" width="600" align="center">
-						<table cellpadding="0" cellspacing="0" width="100%">
-							<tr align="top">
-								<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; width: 100%;">
+<table width="100%" cellpadding="0" cellspacing="0">
+	<tr>
+		<td class="" width="100%" align="center">
+			<table cellpadding="0" cellspacing="0" width="100%">
+				<tr align="top">
+					<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
+    background-position: center;">
+					</td>
+				</tr>
+				<tr align="top">
+					<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); height: 38px; width: 100%; background-position: top center;        background-size: 100% 100%;background-repeat: no-repeat;">
+					</td>
+				</tr>
+				<tr align="top">
+					<td class=""
+						style="background-size: contain;    background-position: top center; background-image:url(https://activepathways.co/images/midde-repeat.jpg); width: 100%; background-repeat: repeat-y; padding: 0 50px 0px;">
+						<table cellpadding="0" cellspacing="0">
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 16px; font-weight: 400; padding: 0; margin-top: 30px; color: #3d3d3d;">
+									HI {{name.first}},
 								</td>
 							</tr>
-							<tr align="top">
-								<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); height: 38px; width: 100%;">
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 17px; line-height: 1.6; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
+									Welcome to Active Pathways! We are thrilled that you joined our
+									programme. You’ve made first move towards a health and happier life.
+
 								</td>
 							</tr>
-							<tr align="top">
-								<td class="column">
-									<table cellpadding="0" cellspacing="0"
-										   style=" background-image:url(https://activepathways.co/images/midde-repeat.jpg); width: 100%; background-repeat: repeat-y; padding: 0 50px 0px;">
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 16px; font-weight: 400; padding: 0; margin-top: 30px; color: #444444;">
-												HI {{name.first}},
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 17px; line-height: 1.6; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
-												Welcome to Active Pathways! We are thrilled that you joined our
-												programme. You’ve made first move towards a health and happier life.
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 17px; line-height: 1.6; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
+									Active Pathways is an invitation to fully live the present moment, to
+									see the world
+									around you with new eyes and discover opportunities to exercise in your
+									daily routing.
 
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 17px; line-height: 1.6; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
-												Active Pathways is an invitation to fully live the present moment, to
-												see the world
-												around you with new eyes and discover opportunities to exercise in your
-												daily routing.
-
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
-												Get ready. You start tomorrow!
-
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 18px; font-weight: 400; padding-bottom: 5px; color: #4a4a4a;">
-												Before starting the programme,<br> we invite you to complete the
-												following
-												steps:
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #aeb7c1;">
-												<span style="text-align: center; border: 1px solid #96bfe2; color: #96bfe2; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
-												Complete our wellbeing assessment
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #aeb7c1;">
-												<span style="text-align: center; border: 1px solid #96bfe2; margin-right: 10px; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
-												Say hello in our Facebook page
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #aeb7c1;">
-												<span style="text-align: center; border: 1px solid #96bfe2; margin-right: 10px; color: #96bfe2; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">3</span>
-												Multiply the fun. Invite your family and friends
-											</td>
-										</tr>
-										<tr>
-											<td align="center">
-												<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff;text-decoration: none;"
-												   href="https://activepathways.co">GET STARTED</a>
-											</td>
-										</tr>
-										<tr>
-											<td align="center"
-												style="border-top: 1px solid #eef3f8;">
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 14px; font-weight: 300; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
-												Thank you for joining!<br>
-												-The Active pathways Team
-											</td>
-										</tr>
-									</table>
 								</td>
 							</tr>
-							<tr style=" background-image:url(https://activepathways.co/images/bottom-corner-white.jpg); height: 92px; width: 100%; background-repeat: no-repeat; padding: 0 50px 100px;">
-								<td>
-									
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 17px; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
+									Get ready. You start tomorrow!
+
+								</td>
+							</tr>
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 18px; font-weight: 400; padding-bottom: 5px; color: #3d3d3d;">
+									Before starting the programme,<br> we invite you to complete the
+									following
+									steps:
+								</td>
+							</tr>
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
+									<span style="text-align: center; border: 1px solid #408bca; color: #408bca; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
+									Complete our wellbeing assessment
+								</td>
+							</tr>
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
+									<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #408bca; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
+									Say hello in our Facebook page
+								</td>
+							</tr>
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
+									<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #408bca; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">3</span>
+									Multiply the fun. Invite your family and friends
+								</td>
+							</tr>
+							<tr>
+								<td align="center">
+									<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff;text-decoration: none;"
+									   href="https://activepathways.co">GET STARTED</a>
+								</td>
+							</tr>
+							<tr>
+								<td align="center"
+									style="border-top: 1px solid #eef3f8;">
+								</td>
+							</tr>
+							<tr>
+								<td width="100%" align="left"
+									style="font-size: 14px; font-weight: 300; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
+									Thank you for joining!<br>
+									-The Active pathways Team
 								</td>
 							</tr>
 						</table>
 					</td>
 				</tr>
+				<tr style=" background-image:url(https://activepathways.co/images/bottom-corner-white.jpg); height: 92px; width: 100%;background-size: 100%; background-repeat: no-repeat; padding: 0 50px 100px; background-position: top center;">
+					<td>
+
+					</td>
+				</tr>
 			</table>
-		</div>
-	</div>
-</div>
+		</td>
+	</tr>
+</table>
 </body>
 </html>
