--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -3,23 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Email Check In</title>
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+	<!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">-->
 	<style type="text/css">
 		body, td, input, textarea, select {
-			/*!*font-family: 'Avenir Next' !important;*!*/
-			font-family: 'Open Sans', sans-serif;
+			font-family: 'Avenir Next' !important;
+			/*font-family: 'Open Sans', sans-serif;*/
+		}
+		@font-face {
+			font-family: 'Avenir Next';
+			src: url("http://www.yoursite.com/fonts/Avenir_Next.otf"); /* File to be stored at your site */
 		}
 
-		.midd-content .gradient-part {
-			width: 520px;
-			padding: 40px;
+		.gradient-part {
+			/*width: 520px;*/
+			/*padding: 40px;*/
 			color: #fff;
 			margin: auto;
-			background: rgb(27, 188, 197);
-			background: -moz-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			background: -webkit-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			background: linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc5', endColorstr='#139ed0', GradientType=1);
+			background: rgb(45,188,198);
+			background: -moz-linear-gradient(-45deg, rgba(45,188,198,1) 0%, rgba(17,151,206,1) 59%, rgba(17,151,206,1) 99%);
+			background: -webkit-linear-gradient(-45deg, rgba(45,188,198,1) 0%,rgba(17,151,206,1) 59%,rgba(17,151,206,1) 99%);
+			background:linear-gradient(123deg, rgba(45,188,198,1) 0%,rgba(17,151,206,1) 59%,rgba(17,151,206,1) 99%);
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1bbcc6', endColorstr='#1197ce',GradientType=1 );
 		}
 
 		.default-gradient-color {
@@ -37,13 +41,17 @@
 	</style>
 </head>
 <body style="background-color: #fff;  margin: 0;  padding: 0">
+<div style="max-width: 600px; margin:auto;">
 <table width="100%" cellpadding="0" cellspacing="0">
 	<tr>
 		<td class="" width="100%" align="center">
 			<table cellpadding="0" cellspacing="0" width="100%">
 				<tr align="top">
-					<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
+					<!--<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
     background-position: center;">
+					</td>-->
+					<td class="gradient-part" style="height: 186px; font-size: 34px; font-weight: 600; text-align: center; color: #fff;">
+						Welcome to<br> Active Pathways!
 					</td>
 				</tr>
 				<tr align="top">
@@ -56,13 +64,13 @@
 						<table cellpadding="0" cellspacing="0">
 							<tr>
 								<td width="100%" align="left"
-									style="font-size: 16px; font-weight: 400; padding: 0; margin-top: 30px; color: #3d3d3d;">
+									style="font-size: 16px; font-weight: 500; color: #3d3d3d; padding-bottom: 20px;">
 									HI {{name.first}},
 								</td>
 							</tr>
 							<tr>
 								<td width="100%" align="left"
-									style="font-size: 17px; line-height: 1.6; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
+									style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #828fa0; font-family: 'Avenir Next';">
 									Welcome to Active Pathways! We are thrilled that you joined our
 									programme. You’ve made first move towards a health and happier life.
 
@@ -70,7 +78,7 @@
 							</tr>
 							<tr>
 								<td width="100%" align="left"
-									style="font-size: 17px; line-height: 1.6; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
+									style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #828fa0;">
 									Active Pathways is an invitation to fully live the present moment, to
 									see the world
 									around you with new eyes and discover opportunities to exercise in your
@@ -80,7 +88,7 @@
 							</tr>
 							<tr>
 								<td width="100%" align="left"
-									style="font-size: 17px; font-weight: 100; padding-bottom: 20px; color: #7e8b9c;">
+									style="font-size: 17px; font-weight: 300; padding-bottom: 20px; color: #828fa0;">
 									Get ready. You start tomorrow!
 
 								</td>
@@ -144,5 +152,6 @@
 		</td>
 	</tr>
 </table>
+</div>
 </body>
 </html>
