remove the white space from see all nites modal description tag

--- a/service-web/src/components/notes-card-modal/notes-card-modal.html
+++ b/service-web/src/components/notes-card-modal/notes-card-modal.html
@@ -18,9 +18,9 @@
                 <div class="scroll-my-journal">
                   <ul class="list pl0 tl mt0" v-if="userJournal && userJournal.length">
                     <li v-for="challenge in userJournal" class="pa3 pa3-ns bb b--black-05">
-                <span class="f5 db lh-copy measure color-light">
+                <span class="f5 db lh-copy color-light">
                   <span class="fw5">{{(challenge['challenge'] || {})['name']}}</span>
-                  <span class="fw3 db truncate w5 w-100-l w-100-m">{{challenge['notes']}}</span></span>
+                  <span class="fw3 db w5 w-100-l w-100-m">{{challenge['notes']}}</span></span>
                     </li>
                   </ul>
                   <div v-else>
