Fix bugs :- After link click if not logged in should take to link on post login bug ,  on email templates, replace Postmaster (from) with The Active Pathways Team,  Replace email title on challenge check-in reminder email template,  Change sorting on Dash, Replace copy on Challenge state buttons

--- a/service-web/src/components/challengeStates/noCheckIn/noCheckIn.html
+++ b/service-web/src/components/challengeStates/noCheckIn/noCheckIn.html
@@ -22,10 +22,10 @@
         </p>
         <div>
           <a class="f6 fw5 link br-pill ph4 mb2 mt3 dib white blue-dark-color pt2 pb2 lh-copy" href="javascript:void(0)">
-            ACCEPT TRAIN
+            ACCEPT CHALLENGE
           </a>
           <a class="f6 fw5 link br-pill ph4 mb2 mt3 dib blue b--blue ba pt2 pb2 lh-copy ml2" href="javascript:void(0)">
-            SKIP TRAIN
+            SKIP
           </a>
         </div>
       </article>
