--- a/service-web/src/components/login/forgetPassword/forgetPassword.html
+++ b/service-web/src/components/login/forgetPassword/forgetPassword.html
@@ -2,11 +2,11 @@
          @click.prevent="closeModal($event)">
   <section class="modal-frame h-100 dt ph2 ph2-m ph0-l pt4-m pv0-l">
     <div class="w-100 modal-dialog dtc v-mid ph2">
-      <div class="w-100  mb5 z-3 relative" @click.prevent="$event.stopPropagation()">
-        <div class="w-100 bg-white  black br3 shadow-default animation">
-          <i
-            class="bg-white h2 w2 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m z-4 br5 pointer"
-            @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png" class="v-tb"/></i>
+      <div class="w-100  mb5 z-3 relative animation" @click.prevent="$event.stopPropagation()">
+        <i
+          class="bg-white h2 w2 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m z-4 br5 pointer"
+          @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png" class="v-tb"/></i>
+        <div class="w-100 bg-white  black br3 shadow-default height-370 overflow-hidden">
           <div class="cf db o-90">
             <div class="fl w-100 w-50-l w-50-m pa4 avenir">
               <div class="cf w-100">
@@ -17,15 +17,16 @@
                 consectetur adipiscing.</p></div>
               <form class="measure center">
                 <fieldset class="ba b--transparent ph0 mh0 pb0">
-                  <div class="mt3 relative">
-                    <input class="pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
+                  <div class="mt3 text-field">
+                    <input class=" navy" type="email"
                            name="email-address"
                            v-validate="'required|email'"
                            data-vv-as="email"
                            v-model="email"
+                           id="e-mail"
+                           placeholder="E-mail"
                            required/>
-                    <span class="bar"></span>
-                    <label class="f6-ns fw5 avenir">E-mail</label>
+                    <label class="f6-ns fw5 avenir" for="e-mail">E-mail</label>
                     <span v-show="errors.has('email-address')" class="help is-danger absolute left-0 mt1">{{ errors.first('email-address') }}</span>
                   </div>
                 </fieldset>
@@ -36,9 +37,9 @@
                 </div>
               </form>
             </div>
-            <div class="fl w-100 w-50-l w-50-m blue-dark-color pa5 br--right br3 dn db-l db-m">
-              <div class=" br-100 pa1 bg-light-blue h5 w5 o-20 center pa5 ma5">
-              </div>
+            <div class="fl w-100 w-50-l w-50-m blue-dark-color pa5 br--right br3 dn db-l db-m vh-100">
+             <!-- <div class=" br-100 pa1 bg-light-blue h5 w5 o-20 center pa5 ma5 ">
+              </div>-->
             </div>
           </div>
         </div>
