--- a/service-web/src/components/login/signIn/signIn.html
+++ b/service-web/src/components/login/signIn/signIn.html
@@ -2,39 +2,37 @@
          @click.prevent="closeModal($event)">
   <section class="modal-frame h-100 dt ph3 ph2-m ph0-l pt4-m pv0-l">
     <div class="w-100 modal-dialog dtc v-mid ph2">
-      <div class="w-100  mb5 z-3 relative" @click.prevent="$event.stopPropagation()">
-        <div class="w-100 bg-white  black br3 shadow-default animation">
-          <i
-            class="bg-white h2 w2 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m z-4 br5 pointer"
-            @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png" class="v-tb"/></i>
+      <div class="w-100  mb5 z-3 relative animation" @click.prevent="$event.stopPropagation()">
+        <i
+          class="bg-white h2 w2 absolute top-0 top--1-m top--1-l br-100 right-0 right--1-l right--1-m z-4 br5 pointer"
+          @click.prevent="closeModal($event)"><img src="../../../assets/images/close-icon.png" class="v-tb"/></i>
+        <div class="w-100 bg-white  black br3 shadow-default height-370 overflow-hidden">
           <div class="cf db o-90">
-            <div class="fl w-100 w-50-l w-50-m pa4 avenir">
+            <div class="fl w-100 w-50-l w-50-m pa4 avenir height-370">
               <div class="cf w-100">
                 <div class="w-50 fl f4 fw5 navy tl">Sign In</div>
                 <div class="w-50 fr f6 fw6 blue tr mt2 pointer" @click.prevent="openSignUp($event)">SIGN UP</div>
               </div>
-              <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Lorem ipsum dolor sit amet,
-                consectetur adipiscing.</p></div>
+              <div class="w-100 cf"><p class="f6 f5-ns lh-copy measure tl navy avenir mt2">Please fill in this form to login.</p></div>
               <form class="measure center">
                 <fieldset class="ba b--transparent ph0 mh0 pb0">
-                  <div class="mt3 relative">
-                    <input class="pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy" type="email"
+                  <div class="mt3 text-field">
+                    <input class="navy" type="email"
                            name="email-address"
                            id="email-address"
                            v-validate="'required|email'"
                            data-vv-as="email"
-                           v-model="email" required/>
-                    <span class="bar"></span>
-                    <label class="f6-ns fw5">Username or e-mail</label>
+                           v-model="email" placeholder="Username or e-mail" required/>
+                    <!--<span class="bar"></span>-->
+                    <label class="f6-ns fw5" for="email-address">Username or e-mail</label>
                     <span v-show="errors.has('email-address')" class="help is-danger absolute left-0 mt1">{{ errors.first('email-address') }}</span>
                   </div>
-                  <div class="mt4 relative">
-                    <input class="pv2 input-reset bb b--black-20 bg-transparent br-0 bl-0 bt-0 w-100 navy"
+                  <div class="mt4 text-field">
+                    <input class="navy"
                            type="password" v-model="password" name="password" id="password"
-                           v-validate="'required|alpha_num'" data-vv-as="password" required/>
-
-                    <span class="bar"></span>
-                    <label class="f6-ns fw5 avenir">Password</label>
+                           v-validate="'required|alpha_num'" data-vv-as="password" placeholder="Password" required/>
+                    <!--<span class="bar"></span>-->
+                    <label class="f6-ns fw5 avenir" for="password">Password</label>
                     <span v-show="errors.has('password')" class="help is-danger absolute left-0 mt1">{{ errors.first('password') }}</span>
                   </div>
                 </fieldset>
@@ -47,15 +45,15 @@
                      @click.prevent="signIn($event)">LOGIN</a>
                   <div v-else class="button-loader"></div>
                 </div>
-                <div class="cf w-100 mt2">
-                  <a class="small-font fw6 link dim br-pill ph3 pv3 mb2 dib ba b--lightest-blue blue w-100" href="#0">FACEBOOK
+               <!-- <div class="cf w-100 mt2">
+                  <a class="small-font fw6 link dim br-pill ph3 pv3 mb2 dib ba b&#45;&#45;lightest-blue blue w-100" href="#0">FACEBOOK
                     CONNECT</a>
-                </div>
+                </div>-->
               </form>
             </div>
-            <div class="fl w-100 w-50-l w-50-m blue-dark-color pa5 br--right br3 dn db-l db-m">
-              <div class=" br-100 pa1 bg-light-blue h5 w5 o-20 center pa5 ma5">
-              </div>
+            <div class="fl w-100 w-50-l w-50-m blue-dark-color pa5 br--right br3 dn db-l db-m vh-100">
+             <!-- <div class=" br-100 pa1 h5 w5 o-20 center pa5 ma5">
+              </div>-->
             </div>
           </div>
         </div>
