add new link in welcome email template and add some missing text or remove get started button

--- a/service-api/templates/emailTemplates/Welcome.html
+++ b/service-api/templates/emailTemplates/Welcome.html
@@ -37,6 +37,15 @@
 		.border-radius-4 {
 			border-radius: 4px;
 		}
+		 a {
+			
+			 color: #828fa0; 
+			 text-decoration: none;
+		}
+		a:hover {
+			color: navy;
+			text-decoration: underline;
+		}
 
 	</style>
 </head>
@@ -82,7 +91,7 @@
 									Active Pathways is an invitation to fully live the present moment, to
 									see the world
 									around you with new eyes and discover opportunities to exercise in your
-									daily routing.
+									daily routine.
 
 								</td>
 							</tr>
@@ -105,29 +114,29 @@
 								<td width="100%" align="left"
 									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
 									<span style="text-align: center; border: 1px solid #408bca; color: #408bca; border-radius: 50%; margin-right: 10px; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">1</span>
-									Complete our wellbeing assessment
+									<a href="https://www.surveymonkey.co.uk/r/P6MLZZK" target="_blank" >Complete our wellbeing assessment</a>
 								</td>
 							</tr>
 							<tr>
 								<td width="100%" align="left"
 									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
 									<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #408bca; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">2</span>
-									Say hello in our Facebook page
+									<a href="https://www.facebook.com/getwalkers/)" target="_blank">Say hello in our Facebook page</a>
 								</td>
 							</tr>
 							<tr>
 								<td width="100%" align="left"
-									style="font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
+									style=" padding-bottom: 20px; font-size: 17px; font-weight: 100; padding-top: 10px; color: #828fa0;">
 									<span style="text-align: center; border: 1px solid #408bca; margin-right: 10px; color: #408bca; border-radius: 50%; height: 25px; width: 25px; line-height: 1.5; display: inline-block;">3</span>
 									Multiply the fun. Invite your family and friends
 								</td>
 							</tr>
-							<tr>
+							<!--<tr>
 								<td align="center">
 									<a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff;text-decoration: none;"
 									   href="https://activepathways.co">GET STARTED</a>
 								</td>
-							</tr>
+							</tr>-->
 							<tr>
 								<td align="center"
 									style="border-top: 1px solid #eef3f8;">
