--- a/service-api/templates/emailTemplates/emailNewChallenge.html
+++ b/service-api/templates/emailTemplates/emailNewChallenge.html
@@ -3,18 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Email Check In</title>
+	<!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">-->
 	<style type="text/css">
+		body, td, input, textarea, select {
+			font-family: 'Avenir Next' !important;
+			/*font-family: 'Open Sans', sans-serif;*/
+		}
+		@font-face {
+			font-family: 'Avenir Next';
+			src: url("http://www.yoursite.com/fonts/Avenir_Next.otf"); /* File to be stored at your site */
+		}
 
-		.midd-content .gradient-part {
-			width: 520px;
-			padding: 40px;
+		.gradient-part {
+			/*width: 520px;*/
+			/*padding: 40px;*/
 			color: #fff;
 			margin: auto;
-			background: rgb(27, 188, 197);
-			background: -moz-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			background: -webkit-linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			background: linear-gradient(135deg, rgba(27, 188, 197, 1) 9%, rgba(19, 158, 208, 1) 60%);
-			filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1bbcc5', endColorstr='#139ed0', GradientType=1);
+			background: rgb(45,188,198);
+			background: -moz-linear-gradient(-45deg, rgba(45,188,198,1) 0%, rgba(17,151,206,1) 59%, rgba(17,151,206,1) 99%);
+			background: -webkit-linear-gradient(-45deg, rgba(45,188,198,1) 0%,rgba(17,151,206,1) 59%,rgba(17,151,206,1) 99%);
+			background:linear-gradient(123deg, rgba(45,188,198,1) 0%,rgba(17,151,206,1) 59%,rgba(17,151,206,1) 99%);
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1bbcc6', endColorstr='#1197ce',GradientType=1 );
 		}
 
 		.default-gradient-color {
@@ -28,71 +37,82 @@
 		.border-radius-4 {
 			border-radius: 4px;
 		}
+		a {
+
+			color: #828fa0;
+			text-decoration: none;
+		}
+		a:hover {
+			color: navy;
+			text-decoration: underline;
+		}
+
 	</style>
 </head>
-<body style="background-color: #fff;  margin: 0;  padding: 0;  font-family: 'Avenir Next';">
-<div class="wrapper" style="height: 100%;  width: 100%;  display: table;  position: absolute;">
-	<div class="midd-content" style="display: table-cell;  vertical-align: middle;">
-		<div class="gradient-part" style="padding:40px 0 0 0; width: 600px;">
-			<table width="100%" cellpadding="0" cellspacing="0">
-				<tr>
-					<td class="" width="600" align="center">
-						<table cellpadding="0" cellspacing="0" width="100%">
-							<tr>
-								<td class="column" width="100%">
-									<table width="100%" cellpadding="0" cellspacing="0">
-										<tr class="">
-											<td width="100%" align="left"
-												style="font-size: 34px; font-weight: 600; text-align: center;     padding-top: 13px; padding-bottom: 87px;">
-												Ready? <br> You have a new challenge!
-											</td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-							<tr style="background-color: #fdfdfd;">
-								<td class="column" width="100%" style="padding:0 20px;">
-									<table width="100%" cellpadding="0" cellspacing="0"
-										   style=" background-color: #fff; margin: -40px 0 40px; padding:20px; border-radius: 10px; box-shadow: 0px 35px 34px 3px hsla(0, 0%, 94%, 0.78);">
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 16px; font-weight: 400; padding: 0; margin-top: 30px; color: #444444;">
-												HI {{userName}},
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 18px; font-weight: 200; padding-top: 10px; color: #828fa0;">
-												You have a new challenge ready
-											</td>
-										</tr>
-										<tr>
-											<td align="center">
-												<a href="{{websiteUrl}}#/challenge/{{challengeId}}"
-												   style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff;text-decoration: none;"
-												>SHOW ME</a>
-											</td>
-										</tr>
-										<tr>
-											<td align="center"
-												style="border-top: 1px solid #eef3f8;">
-											</td>
-										</tr>
-										<tr>
-											<td width="100%" align="left"
-												style="font-size: 14px; font-weight: 300; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
-												-The Active pathways Team
-											</td>
-										</tr>
-									</table>
-								</td>
-							</tr>
-						</table>
-					</td>
-				</tr>
-			</table>
-		</div>
-	</div>
+<body style="background-color: #fff;  margin: 0;  padding: 0">
+<div style="max-width: 600px; margin:auto;">
+	<table width="100%" cellpadding="0" cellspacing="0">
+		<tr>
+			<td class="" width="100%" align="center">
+				<table cellpadding="0" cellspacing="0" width="100%">
+					<tr align="top">
+						<!--<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/welcome-part.jpg); height: 186px; background-repeat:no-repeat;  width: 100%; background-size: cover;;
+        background-position: center;">
+                        </td>-->
+						<td class="gradient-part" style="height: 186px; font-size: 34px; font-weight: 600; text-align: center; color: #fff;">
+							Ready? <br> You have a new challenge!
+						</td>
+					</tr>
+					<tr align="top">
+						<td style="color: #000; font-size: 20px; background-image:url(https://activepathways.co/images/top-corner-white.jpg); height: 38px; width: 100%; background-position: top center;        background-size: 100% 100%;background-repeat: no-repeat;">
+						</td>
+					</tr>
+					<tr align="top">
+						<td class=""
+							style="background-size: contain;    background-position: top center; background-image:url(https://activepathways.co/images/midde-repeat.jpg); width: 100%; background-repeat: repeat-y; padding: 0 50px 0px;">
+							<table width="100%" cellpadding="0" cellspacing="0">
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 16px; font-weight: 500; color: #3d3d3d; padding-bottom: 20px;">
+										HI {{userName}},
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 17px; line-height: 1.6; font-weight: 300; padding-bottom: 20px; color: #828fa0; font-family: 'Avenir Next';">
+										You have a new challenge ready
+
+									</td>
+								</tr>
+								<tr>
+                                    <td align="center">
+                                        <a style="font-size: 12px; font-weight: 300; width: 190px; display: block; padding: 12px; margin: 30px auto 50px; border-radius: 20px; text-align: center; background-color: #408bca; color: #fff;text-decoration: none;"
+                                           href="{{websiteUrl}}#/challenge/{{challengeId}}">SHOW ME</a>
+                                    </td>
+                                </tr>
+								<tr>
+									<td align="center"
+										style="border-top: 1px solid #eef3f8;">
+									</td>
+								</tr>
+								<tr>
+									<td width="100%" align="left"
+										style="font-size: 14px; font-weight: 300; text-align: center; color: #b5beca;     padding: 25px 0 20px;">
+										-The Active pathways Team
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr style=" background-image:url(https://activepathways.co/images/bottom-corner-white.jpg); height: 92px; width: 100%;background-size: 100%; background-repeat: no-repeat; padding: 0 50px 100px; background-position: top center;">
+						<td>
+
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+	</table>
 </div>
 </body>
 </html>
